Fix 414 errors from log agg index Fix map-mode overlapping in arctic theme Don't display the MN logo in search results

--- a/metacatui/src/main/webapp/js/themes/arctic/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/arctic/css/metacatui.css
@@ -810,9 +810,8 @@ img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
     	padding-top: 160px;
     }
     .mapMode #Content{
-    	padding-top: 0px;
+    	padding-top: 112px;
     }
-    
     .navbar .nav {
       margin-top: 8px;
     }
